--- a/DN2/style.css
+++ b/DN2/style.css
@@ -54,6 +54,13 @@ body {
 /* TYPOGRAPHY                                                                 */
 /* ========================================================================== */
 
+@font-face {
+    font-family: 'Perfect DOS VGA 437';
+    src: url('PerfectDOSVGA437.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 h1 {
     margin: 0;
     font-size: 1.1rem;
